close #192 - ทำการแก้ไข katalon ของระบบบันทึกค่าใช้จ่าย

--- a/testCase/2 Team21 Sprint 1.html
+++ b/testCase/2 Team21 Sprint 1.html
@@ -457,7 +457,7 @@
 </tr>
 <tr><td>click</td><td>id=usernameStu1<datalist><option>id=usernameStu1</option><option>//input[@id='usernameStu1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameStu1</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>id=usernameStu1<datalist><option>id=usernameStu1</option><option>//input[@id='usernameStu1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameStu1</option></datalist></td><td>stu002</td>
+<tr><td>type</td><td>id=usernameStu1<datalist><option>id=usernameStu1</option><option>//input[@id='usernameStu1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameStu1</option></datalist></td><td>stu001</td>
 </tr>
 <tr><td>type</td><td>id=passwordStu1<datalist><option>id=passwordStu1</option><option>//input[@id='passwordStu1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[2]/div[2]/div/div/div/div/input</option><option>//div[2]/div[2]/div/div/div/div/input</option><option>css=#passwordStu1</option></datalist></td><td>123</td>
 </tr>
@@ -467,7 +467,7 @@
 </tr>
 <tr><td>click</td><td>id=coursename001<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='เลือกคอร์สที่ท่านลงทะเบียนแล้ว เพื่อรีวิว'])[1]/following::div[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[1]/following::div[2]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[2]/preceding::div[7]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='เลือกระดับความพึงพอใจของท่าน'])[1]/preceding::div[7]</option><option>//div[@id='app']/div[2]/main/div/div/div/div/div/div/div/div/div/div/div/div</option><option>//div/div/div/div/div/div/div/div/div/div/div/div</option><option>css=div.v-select__selections</option><option>id=coursename001</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>xpath=//*/text()[normalize-space(.)='AAA']/parent::*<datalist><option>id=course-a-list-item-125</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Course B'])[1]/preceding::div[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Reviews Course'])[1]/preceding::div[4]</option><option>xpath=//*/text()[normalize-space(.)='Course A']/parent::*</option><option>//div[@id='course-a-list-item-125']</option><option>xpath=(//div[@id='list-94']/div/div/div)[2]</option><option>//div/div/div/div/div/div/div/div</option><option>css=#course-a-list-item-125</option><option>xpath=//*/text()[normalize-space(.)='AAA']/parent::*</option></datalist></td><td></td>
+<tr><td>click</td><td>xpath=//*/text()[normalize-space(.)='Course A']/parent::*<datalist><option>id=course-a-list-item-125</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Course B'])[1]/preceding::div[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Reviews Course'])[1]/preceding::div[4]</option><option>xpath=//*/text()[normalize-space(.)='Course A']/parent::*</option><option>//div[@id='course-a-list-item-125']</option><option>xpath=(//div[@id='list-94']/div/div/div)[2]</option><option>//div/div/div/div/div/div/div/div</option><option>css=#course-a-list-item-125</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=rating001<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='เลือกระดับความพึงพอใจของท่าน'])[1]/following::div[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[2]/following::div[2]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[3]/preceding::div[7]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='เลือกประเภทสิ่งที่อยากให้ปรับปรุง'])[1]/preceding::div[7]</option><option>//div[@id='app']/div[3]/main/div/div/div/div/div/div[2]/div/div/div/div/div/div</option><option>//div[2]/div/div/div/div/div/div</option><option>css=div.v-input.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.v-select--is-menu-active.primary--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections</option><option>id=rating001</option></datalist></td><td></td>
 </tr>
@@ -497,7 +497,7 @@
 </tr>
 <tr><td>click</td><td>id=usernameStu1<datalist><option>id=usernameStu1</option><option>//input[@id='usernameStu1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameStu1</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>id=usernameStu1<datalist><option>id=usernameStu1</option><option>//input[@id='usernameStu1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameStu1</option></datalist></td><td>stu002</td>
+<tr><td>type</td><td>id=usernameStu1<datalist><option>id=usernameStu1</option><option>//input[@id='usernameStu1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameStu1</option></datalist></td><td>stu001</td>
 </tr>
 <tr><td>type</td><td>id=passwordStu1<datalist><option>id=passwordStu1</option><option>//input[@id='passwordStu1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[2]/div[2]/div/div/div/div/input</option><option>//div[2]/div[2]/div/div/div/div/input</option><option>css=#passwordStu1</option></datalist></td><td>123</td>
 </tr>
@@ -506,8 +506,6 @@
 <tr><td>click</td><td>id=SuccessStu2<datalist><option>id=SuccessStu2</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='เข้าสู่ระบบเสร็จสิ้น .'])[1]/preceding::button[1]</option><option>//button[@id='SuccessStu2']</option><option>//div[@id='app']/div/div/div/button</option><option>//button</option><option>css=#SuccessStu2</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=coursename001<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[1]/following::div[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='รีวิวคอร์สเรียน'])[1]/following::div[8]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[2]/preceding::div[8]</option><option>//div[@id='app']/div[2]/main/div/div/div/div/div/div/div/div/div/div/div</option><option>//div/div/div/div/div/div/div/div/div/div/div</option><option>css=div.v-select__slot</option><option>id=coursename001</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>xpath=//*/text()[normalize-space(.)='AAA']/parent::*<datalist><option>xpath=//*/text()[normalize-space(.)='AAA']/parent::*</option><option>id=course-a-list-item-125</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Course B'])[1]/preceding::div[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Reviews Course'])[1]/preceding::div[4]</option><option>xpath=//*/text()[normalize-space(.)='Course A']/parent::*</option><option>//div[@id='course-a-list-item-125']</option><option>xpath=(//div[@id='list-94']/div/div/div)[2]</option><option>//div/div/div/div/div/div/div/div</option><option>css=#course-a-list-item-125</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>//div/div/div/div/div/div/div<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Course B'])[1]/preceding::div[2]</option><option>xpath=(//div[@id='list-98']/div/div)[2]</option><option>//div/div/div/div/div/div/div</option><option>css=div.v-list-item__content</option></datalist></td><td></td>
 </tr>
@@ -522,7 +520,7 @@
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">6.B6010331 RecordExpense 1-Successed </td></tr>
+<tr><td rowspan="1" colspan="3">6.B6010331 RecordExpense 1.1 Employee-Successed </td></tr>
 </thead>
 <tbody>
 <tr><td>open</td><td>http://localhost:8080/<datalist><option>http://localhost:8080/</option></datalist></td><td></td>
@@ -556,6 +554,48 @@
 <tr><td>click</td><td>id=RE005<datalist><option>id=RE005</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='กอบ จำกี'])[2]/following::button[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='ผู้บันทึก'])[1]/following::button[1]</option><option>//button[@id='RE005']</option><option>//div[@id='app']/div[3]/main/div/div/div/div/div/div[6]/button</option><option>//div[6]/button</option><option>css=#RE005</option></datalist></td><td></td>
 </tr>
 <tr><td>assertText</td><td>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Successful process'])[1]/following::label[1]<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Successful process'])[1]/following::label[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='close'])[1]/preceding::label[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='รับเงินจากนักเรียน'])[1]/preceding::label[1]</option><option>xpath=//*/text()[normalize-space(.)='บันทึกข้อมูลเสร็จสิ้น']/parent::*</option><option>//div[@id='app']/div/div/div/div[2]/div/div/label</option><option>//label</option><option>css=label</option></datalist></td><td>บันทึกข้อมูลเสร็จสิ้น</td>
+</tr>
+</tbody></table>
+<table cellpadding="1" cellspacing="1" border="1">
+<thead>
+<tr><td rowspan="1" colspan="3">6.B6010331 RecordExpense 1.2 Student-Sucessed</td></tr>
+</thead>
+<tbody>
+<tr><td>open</td><td>http://localhost:8080/<datalist><option>http://localhost:8080/</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//button[@id='showLogin']/span<datalist><option>//button[@id='showLogin']/span</option><option>//div[8]/button/span</option><option>css=#showLogin &gt; span.v-btn__content</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=showloginAsEmp<datalist><option>id=showloginAsEmp</option><option>//button[@id='showloginAsEmp']</option><option>//div[@id='app']/div/div/div/div[2]/div[2]/button</option><option>//div[2]/button</option><option>css=#showloginAsEmp</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=usernameEmp1<datalist><option>id=usernameEmp1</option><option>//input[@id='usernameEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameEmp1</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=usernameEmp1<datalist><option>id=usernameEmp1</option><option>//input[@id='usernameEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameEmp1</option></datalist></td><td>mg001</td>
+</tr>
+<tr><td>click</td><td>id=passwordEmp1<datalist><option>id=passwordEmp1</option><option>//input[@id='passwordEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[2]/div[2]/div/div/div/div/input</option><option>//div[2]/div[2]/div/div/div/div/input</option><option>css=#passwordEmp1</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=passwordEmp1<datalist><option>id=passwordEmp1</option><option>//input[@id='passwordEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[2]/div[2]/div/div/div/div/input</option><option>//div[2]/div[2]/div/div/div/div/input</option><option>css=#passwordEmp1</option></datalist></td><td>123</td>
+</tr>
+<tr><td>click</td><td>id=bin-login-emp<datalist><option>id=bin-login-emp</option><option>//button[@id='bin-login-emp']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[3]/button</option><option>//div[3]/button</option><option>css=#bin-login-emp</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=SuccessEmp1<datalist><option>id=SuccessEmp1</option><option>//button[@id='SuccessEmp1']</option><option>//div[@id='app']/div/div/div/button</option><option>//button</option><option>css=#SuccessEmp1</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=rec00<datalist><option>id=rec00</option><option>//div[@id='rec00']</option><option>//div[@id='app']/div/nav/div/div/div[5]</option><option>//div[5]</option><option>css=#rec00</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[1]/following::div[1]<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[1]/following::div[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='ระบบบันทึกค่าใช้จ่าย'])[1]/following::div[8]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[2]/preceding::div[8]</option><option>//div[@id='app']/div[2]/main/div/div/div/div/div/div/div/div/div/div/div</option><option>//div/div/div/div/div/div/div/div/div/div/div</option><option>css=div.v-select__slot</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='app']/div[2]/main/div/div/div[2]/div/div/div/div/div/div/div/div/div<datalist><option>//div[@id='app']/div[2]/main/div/div/div[2]/div/div/div/div/div/div/div/div/div</option><option>//div[2]/div/div/div/div/div/div/div/div/div</option><option>css=div.v-select__slot</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>xpath=(.//*[normalize-space(text()) and normalize-space(.)='รับเงินจากนักเรียน'])[1]/following::div[1]<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='รับเงินจากนักเรียน'])[1]/following::div[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='POSITION'])[1]/preceding::div[4]</option><option>//div[@id='list-241']/div[2]</option><option>//div/div/div/div[2]</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>xpath=(//div[@id='list-168']/div)[2]<datalist><option>xpath=(//div[@id='list-168']/div)[2]</option><option>//div/div/div/div/div/div</option><option>css=div.v-list-item.v-list-item--link.theme--light</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[2]/following::div[1]<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[2]/following::div[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='จ่ายเงินให้พนักงาน'])[2]/following::div[12]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[3]/preceding::div[8]</option><option>//div[@id='app']/div[3]/main/div/div/div/div/div/div[2]/div/div/div/div/div</option><option>//div/div/div/div[2]/div/div/div/div/div</option><option>css=div.v-input.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.v-select--is-menu-active.primary--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>xpath=(//div[@id='list-199']/div)[2]<datalist><option>xpath=(//div[@id='list-199']/div)[2]</option><option>//div/div/div/div/div/div</option><option>css=div.v-list-item.v-list-item--link.theme--light</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=RE005<datalist><option>id=RE005</option><option>//button[@id='RE005']</option><option>//div[@id='app']/div[3]/main/div/div/div[2]/div/div/div/div[6]/button</option><option>//div[6]/button</option><option>css=#RE005</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>//div[@id='app']/div/div/div/div[2]/div/div/label<datalist><option>//div[@id='app']/div/div/div/div[2]/div/div/label</option><option>//label</option><option>css=label</option></datalist></td><td>บันทึกข้อมูลเสร็จสิ้น</td>
 </tr>
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
