close #194 - แก้ไขคาตาลอนให้เรียบร้อย

--- a/testCase/2 Team21 Sprint 1.html
+++ b/testCase/2 Team21 Sprint 1.html
@@ -587,11 +587,11 @@
 </tr>
 <tr><td>click</td><td>xpath=(.//*[normalize-space(text()) and normalize-space(.)='รับเงินจากนักเรียน'])[1]/following::div[1]<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='รับเงินจากนักเรียน'])[1]/following::div[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='POSITION'])[1]/preceding::div[4]</option><option>//div[@id='list-241']/div[2]</option><option>//div/div/div/div[2]</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>xpath=(//div[@id='list-168']/div)[2]<datalist><option>xpath=(//div[@id='list-168']/div)[2]</option><option>//div/div/div/div/div/div</option><option>css=div.v-list-item.v-list-item--link.theme--light</option></datalist></td><td></td>
+<tr><td>click</td><td>//div/div/div/div/div/div<datalist><option>xpath=(//div[@id='list-168']/div)[2]</option><option>//div/div/div/div/div/div</option><option>css=div.v-list-item.v-list-item--link.theme--light</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[2]/following::div[1]<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[2]/following::div[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='จ่ายเงินให้พนักงาน'])[2]/following::div[12]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[3]/preceding::div[8]</option><option>//div[@id='app']/div[3]/main/div/div/div/div/div/div[2]/div/div/div/div/div</option><option>//div/div/div/div[2]/div/div/div/div/div</option><option>css=div.v-input.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.v-select--is-menu-active.primary--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>xpath=(//div[@id='list-199']/div)[2]<datalist><option>xpath=(//div[@id='list-199']/div)[2]</option><option>//div/div/div/div/div/div</option><option>css=div.v-list-item.v-list-item--link.theme--light</option></datalist></td><td></td>
+<tr><td>click</td><td>//div/div/div/div/div/div<datalist><option>xpath=(//div[@id='list-199']/div)[2]</option><option>//div/div/div/div/div/div</option><option>css=div.v-list-item.v-list-item--link.theme--light</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=RE005<datalist><option>id=RE005</option><option>//button[@id='RE005']</option><option>//div[@id='app']/div[3]/main/div/div/div[2]/div/div/div/div[6]/button</option><option>//div[6]/button</option><option>css=#RE005</option></datalist></td><td></td>
 </tr>
